Naniesienie poprawek na trening fitness. Rozpoczęcie poprawiania treningu cardio.